# osrs-GEpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
osrs_gept/: bootstrap.py  container.py  main.py  models.py  pagination.py  settings.py  wiki_client.py
osrs_gept/routes/: latest.py  mapping.py  well_known.py
osrs_gept/static/: ai-plugin.json  ai-plugin.json.jinja
